--- a/project_gitlab_history/views/project_task_view.xml
+++ b/project_gitlab_history/views/project_task_view.xml
@@ -10,7 +10,7 @@
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='description_page']" position="after">
+            <xpath expr="//page[@name='extra_info']" position="before">
                 <page string="GitLab History">
                     <field name="gitlab_commit_ids" widget="one2many_list" style="pointer-events:none;">
                         <tree string="Gitlab History" editable="bottom" delete="false">
