--- a/project_gitlab_base/views/project_project_view.xml
+++ b/project_gitlab_base/views/project_project_view.xml
@@ -22,4 +22,21 @@
             </xpath>
         </field>
     </record>
+    <record id="view_project_type_form_inherit" model="ir.ui.view">
+        <field name="name">project.type.form.inherit</field>
+        <field name="model">project.type</field>
+        <field name="inherit_id" ref="project_category.project_type_form"/>
+         <field name="arch" type="xml">
+            <xpath expr="//page[last()]" position="after">
+                <page string="GitLab">
+                    <group>
+                        <field name="gitlab_enabled" string="Use Gitlab in project"/>
+                        <field name="gitlab_url" string="Gitlab URL" attrs="{'invisible': [('gitlab_enabled', '=', False)]}"/>
+                        <field name="gitlab_token" string="Gitlab Token" attrs="{'invisible': [('gitlab_enabled', '=', False)]}"/>
+                        <field name="gitlab_project_id" string="Gitlab Project ID" attrs="{'invisible': [('gitlab_enabled', '=', False)]}"/>
+                    </group>
+                </page>
+            </xpath>
+        </field>
+    </record>
 </odoo>
